<resources>
    <string name="app_name">RChatApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_new_chat">Create Chat Room</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign up</string>

    <string name="profile_username">Display Name</string>
    <string name="profile_update_label">Save</string>
    <string name="profile_share_location_label">Share Location</string>
    <string name="profile_on_line_reminder_label">On-line reminder</string>

    <string name="prompt_chat_room">Enter Chat Room Name</string>
    <string name="label_member">Select Chat Members </string>
    <string name="no_chat_room_for_now_n_let_s_one_now">No Chat Room.\n Let\'s create one now</string>

</resources>