<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mongodb.rchatapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_chat_room_list">

        <action
            android:id="@+id/go_to_chatMemberList"
            app:destination="@id/chatMemberList" />

        <action
            android:id="@+id/go_to_chat_message"
            app:destination="@id/chatMessageListFragment" />

        <action
            android:id="@+id/go_to_profile"
            app:destination="@id/navigation_profile" />

        <action
            android:id="@+id/go_to_login"
            app:destination="@id/navigation_login" />

    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.mongodb.rchatapp.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mongodb.rchatapp.ui.profile.ProfileFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_profile">

    </fragment>

    <fragment
        android:id="@+id/chatMemberList"
        android:name="com.mongodb.rchatapp.ui.chatmembers.ChatMemberListFragment"
        android:label="@string/title_new_chat"
        tools:layout="@layout/fragment_member_list" />

    <fragment
        android:id="@+id/chatMessageListFragment"
        android:name="com.mongodb.rchatapp.ui.chat.ChatMessageListFragment"
        android:label="{roomName}"
        tools:layout="@layout/fragment_chat_message">

        <argument
            android:name="conversationId"
            app:argType="string" />

        <argument
            android:name="roomName"
            app:argType="string" />

        <argument
            android:name="currentUserName"
            app:argType="string" />

    </fragment>

</navigation>